--- a/style.css
+++ b/style.css
@@ -67,39 +67,31 @@ header img {
     height: auto;
 }
 
-.photo-gallery {
-    display: flex;
-    justify-content: space-between;
-   
-}
+
 .photo-gallery img{
-    width: 30%; 
-    height: auto;
+    width: 450px; 
+    height: 450px;
     margin: 10px;
 }
-.character {
-    position: relative;
-    width: 30%;
-    margin: 0 5px;
+.question {
+    margin: 20px;
 }
 
-.character img {
-    width: 100%;
-    height: auto;
-}
-
-.character-info {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
-    text-align: center;
-}
-
-
-.character:hover .character-info {
+.choices label {
     display: block;
+    margin-bottom: 10px;
 }
+
+.choices input[type="radio"] {
+    margin-right: 5px;
+}
+
+.result {
+    font-weight: bold;
+    margin: 20px;
+}
+
+
+
+
+
